--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -7,41 +7,41 @@
         KeyDown="MainWindowKeys"
         Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <!--Refactor the Playlist to use this template or delete the comment!-->
-    <StackPanel>
-        <Grid>
-            <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
-                <Grid.Background>
-                    <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
-                </Grid.Background>
-                <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Command="{Binding OpenCommand}" Margin="63,146,485,382">
-                    <StackPanel>
-                        <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
-                    </StackPanel>
-                </Button>
-                <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="CommandProcessing">
-                    <StackPanel>
-                        <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
-                    </StackPanel>
-                </Button>
-                <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Command="{Binding PlayCommand}">
-                    <StackPanel>
-                        <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
-                    </StackPanel>
-                </Button>
-                <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="CommandProcessing">
-                    <StackPanel>
-                        <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
-                    </StackPanel>
-                </Button>
-                <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="CommandProcessing">
-                    <StackPanel>
-                        <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
-                    </StackPanel>
-                </Button>
-            </Grid>
-            <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
 
-            <ListBox Name="Playlist"
+    <Grid>
+        <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
+            <Grid.Background>
+                <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
+            </Grid.Background>
+            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Command="{Binding OpenCommand}" Margin="63,146,485,382">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="CommandProcessing">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Command="{Binding PlayCommand}">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="CommandProcessing">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
+                </StackPanel>
+            </Button>
+            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="CommandProcessing">
+                <StackPanel>
+                    <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
+                </StackPanel>
+            </Button>
+        </Grid>
+        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
+
+        <ListBox Name="Playlist"
                  ItemsSource="{Binding Playlist}"
                  Opacity="0.8"
                  Background="DimGray"
@@ -49,67 +49,68 @@
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
                  Margin="36,298,38,18"
                  AllowDrop="True"
-                     SelectionChanged="Playlist_SelectionChanged">      
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid ShowGridLines="True" >
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="220"/>
-                                <ColumnDefinition Width="70" />
-                                <ColumnDefinition Width="60" />
-                                <ColumnDefinition Width="60" />
-                                <ColumnDefinition Width="65" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Name="Title"
+                     SelectionChanged="Playlist_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid ShowGridLines="True" >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="220"/>
+                            <ColumnDefinition Width="70" />
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="65" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Name="Title"
                            HorizontalAlignment="Left"
                            Grid.Column="0" Grid.Row="0"
                            Text="{Binding Path=Title}" 
                            ToolTip="{Binding Path=Title}"/>
-                            <TextBlock Name="Album"
+                        <TextBlock Name="Album"
                            HorizontalAlignment="Center"
                            Grid.Column="1" Grid.Row="0"
                            Text="{Binding Path=Album}" 
                            ToolTip="{Binding Path=Album}"/>
-                            <TextBlock Name="Artist"
+                        <TextBlock Name="Artist"
                            HorizontalAlignment="Center"
                            Grid.Column="2" Grid.Row="0"
                            Text="{Binding Path=Artist}" 
                            ToolTip="{Binding Path=Artist}"/>
-                            <TextBlock Name="Genre"
+                        <TextBlock Name="Genre"
                            HorizontalAlignment="Center"
                            Grid.Column="3" Grid.Row="0"
                            Text="{Binding Path=Genre}"                     
                            ToolTip="{Binding Path=Genre}" />
-                            <TextBlock Name="Duration"
+                        <TextBlock Name="Duration"
                            Grid.Column="4" Grid.Row="0"
                            HorizontalAlignment="Center"
                            Text="{Binding Path=DurationFormated}" />
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="Background" Value="LightGray" />
-                        <Setter Property="FontWeight" Value="DemiBold"></Setter>
-                        <Setter Property="BorderThickness" Value="2" />
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Background" Value="LightGray" />
+                    <Setter Property="FontWeight" Value="DemiBold"></Setter>
+                    <Setter Property="BorderThickness" Value="2" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
 
-            <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
-            <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
-            <StackPanel>
-                <ToggleButton x:Name = "tb" Content = "Toggle"
+        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
+        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
+        <StackPanel>
+            <ToggleButton x:Name = "tb" Content = "Toggle"
          Checked = "HandleCheck" Unchecked = "HandleCheck" Margin = "20"
          Width = "108" HorizontalAlignment = "Center" />
-            </StackPanel>
-            <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
-                <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
-            </Border>
-            <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,256,36,378" ValueChanged="ChangeValue"/>
-        </Grid>
-    </StackPanel>
+        </StackPanel>
+        <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
+            <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
+        </Border>
+        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,256,36,378" ValueChanged="ChangeValue"/>
+        <Button BorderThickness="0" FontSize="30" Name="ExitButton" Width="70" Height="40" Background="Transparent" BorderBrush="Black" Command="{Binding ExitCommand}" HorizontalAlignment="Left" Margin="514,0,0,549" VerticalAlignment="Bottom">Exit</Button>
+    </Grid>
+
 </Window>
