--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -3,93 +3,109 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModel="clr-namespace:Playground.ViewModel"
         mc:Ignorable="d"
         KeyDown="MainWindowKeys"
-        Title="Sound Wizard" Height="700"  Width="600" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
+        Title="Sound Wizard" Height="700"  Width="1200" ResizeMode="NoResize" Icon="PlayerSkin\SoundWizard.ico">
     <!--Refactor the Playlist to use this template or delete the comment!-->
-    <Window.Resources>
-        <DataTemplate DataType="{x:Type viewModel:SongViewModel}">
-            <Grid ShowGridLines="True" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="220"/>
-                    <ColumnDefinition Width="70" />
-                    <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="65" />
-                </Grid.ColumnDefinitions>
-                <TextBlock Name="Title"
-                           HorizontalAlignment="Left"
-                           Grid.Column="0" Grid.Row="0"
-                           Text="{Binding Path=Title}" 
-                           ToolTip="{Binding Path=Title}"/>
-                <TextBlock Name="Album"
-                           HorizontalAlignment="Center"
-                           Grid.Column="1" Grid.Row="0"
-                           Text="{Binding Path=Album}" 
-                           ToolTip="{Binding Path=Album}"/>
-                <TextBlock Name="Artist"
-                           HorizontalAlignment="Center"
-                           Grid.Column="2" Grid.Row="0"
-                           Text="{Binding Path=Artist}" 
-                           ToolTip="{Binding Path=Artist}"/>
-                <TextBlock Name="Genre"
-                           HorizontalAlignment="Center"
-                           Grid.Column="3" Grid.Row="0"
-                           Text="{Binding Path=Genre}"                     
-                           ToolTip="{Binding Path=Genre}" />
-                <TextBlock Name="Duration"
-                           Grid.Column="4" Grid.Row="0"
-                           HorizontalAlignment="Center"
-                           Text="{Binding Path=Duration}" />
-            </Grid>
-        </DataTemplate>
-    </Window.Resources>
-    <Grid>
-        <Grid Margin="-24,-100,-20,0" Height="771" VerticalAlignment="Bottom">
-            <Grid.Background>
-                <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
-            </Grid.Background>
-            <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Click="CommandProcessing" Margin="63,146,485,382">
-                <StackPanel>
-                    <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
-                </StackPanel>
-            </Button>
-            <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Margin="168,146,380,382" Click="CommandProcessing">
-                <StackPanel>
-                    <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
-                </StackPanel>
-            </Button>
-            <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Margin="269,146,279,382" Click="CommandProcessing">
-                <StackPanel>
-                    <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
-                </StackPanel>
-            </Button>
-            <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="377,146,171,382" Click="CommandProcessing">
-                <StackPanel>
-                    <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
-                </StackPanel>
-            </Button>
-            <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Margin="481,146,67,382" Click="CommandProcessing">
-                <StackPanel>
-                    <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
-                </StackPanel>
-            </Button>
-        </Grid>
-        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Margin="0,10,0,589">Sound Wizard</TextBox>
+    <!--<Window.Resources>
+        -->
+    <!--<VisualBrush x:Key="Media" Stretch="Uniform">
+            <VisualBrush.Visual>
+                <MediaElement Source="C:\Users\badbutcher\Desktop\Games\2017.07.26-14.35_01.mp4" />
+            </VisualBrush.Visual>
+        </VisualBrush>-->
+    <!--
+    </Window.Resources>-->
+    <!--<Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="487*" />
+            <RowDefinition Height="185*" />
+        </Grid.RowDefinitions>-->
+    <!--<Grid.RowDefinitions>
+            <RowDefinition Height="326*" />
+            <RowDefinition Height="325*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Rectangle Fill="{StaticResource Media}" Grid.RowSpan="2" />-->
 
+    <Canvas>
+        <Canvas.Background>
+            <ImageBrush ImageSource="/PlayerSkin/bg.jpg" Stretch="UniformToFill" />
+        </Canvas.Background>
+        <Button BorderThickness="0" Name="OpenButton" Height="70" Width="70" Background="Transparent" BorderBrush="Black" Command="{Binding OpenCommand}" Canvas.Left="700" Canvas.Top="100">
+            <StackPanel>
+                <Image Source="/PlayerSkin/ButtonIcons/OpenSongsButtonIcon.png" />
+            </StackPanel>
+        </Button>
+        <Button BorderThickness="0" Name="RewindButton" Width="70" Height="70"  Background="Transparent" BorderBrush="Black" Command="{Binding RewindCommand}" Canvas.Left="800" Canvas.Top="100">
+            <StackPanel>
+                <Image Source="/PlayerSkin/ButtonIcons/PreviousSongButtonIcon.png" />
+            </StackPanel>
+        </Button>
+        <Button BorderThickness="0" Name="PlayButton" Width="70" Height="70"  Background="Transparent" Command="{Binding PlayCommand}" Canvas.Left="900" Canvas.Top="100">
+            <StackPanel>
+                <Image Source="/PlayerSkin/ButtonIcons/PlayButtonIcon.png" />
+            </StackPanel>
+        </Button>
+        <Button BorderThickness="0" Name="ForwardButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Command="{Binding ForwardCommand}" Canvas.Left="1000" Canvas.Top="100">
+            <StackPanel>
+                <Image Source="/PlayerSkin/ButtonIcons/NextSongButtonIcon.png" />
+            </StackPanel>
+        </Button>
+        <Button BorderThickness="0" Name="StopButton" Width="70" Height="70" Background="Transparent" BorderBrush="Black" Command="{Binding StopCommand}" Canvas.Left="1100" Canvas.Top="100">
+            <StackPanel>
+                <Image Source="/PlayerSkin/ButtonIcons/StopButtonIcon.png" />
+            </StackPanel>
+        </Button>
+        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Canvas.Left="10" Canvas.Top="10" Width="1060" >Sound Wizard</TextBox>
         <ListBox Name="Playlist"
-                 ItemsSource="{Binding}"
+                 ItemsSource="{Binding Playlist}"
                  Opacity="0.8"
                  Background="DimGray"
                  BorderBrush="Transparent"
                  ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 Margin="36,298,38,18"
                  AllowDrop="True"
-                 SelectionChanged="Playlist_SelectionChanged">
+                     SelectionChanged="Playlist_SelectionChanged" HorizontalAlignment="Right" Width="569" Grid.RowSpan="2" Height="385" Canvas.Top="276" Canvas.Left="10">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid ShowGridLines="True">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="220" />
+                            <ColumnDefinition Width="70" />
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="60" />
+                            <ColumnDefinition Width="65" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Name="Title"
+                           HorizontalAlignment="Left"
+                           Grid.Column="0" Grid.Row="0"
+                           Text="{Binding Path=Title}"
+                           ToolTip="{Binding Path=Title}" />
+                        <TextBlock Name="Album"
+                           HorizontalAlignment="Center"
+                           Grid.Column="1" Grid.Row="0"
+                           Text="{Binding Path=Album}"
+                           ToolTip="{Binding Path=Album}" />
+                        <TextBlock Name="Artist"
+                           HorizontalAlignment="Center"
+                           Grid.Column="2" Grid.Row="0"
+                           Text="{Binding Path=Artist}"
+                           ToolTip="{Binding Path=Artist}" />
+                        <TextBlock Name="Genre"
+                           HorizontalAlignment="Center"
+                           Grid.Column="3" Grid.Row="0"
+                           Text="{Binding Path=Genre}"
+                           ToolTip="{Binding Path=Genre}" />
+                        <TextBlock Name="Duration"
+                           Grid.Column="4" Grid.Row="0"
+                           HorizontalAlignment="Center"
+                           Text="{Binding Path=DurationFormated}" />
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
                     <Setter Property="Background" Value="LightGray" />
@@ -98,17 +114,21 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
+        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" Canvas.Left="20" Canvas.Top="119" Width="675" />
 
-        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" Margin="20,206,210,440" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" />
-        <MediaElement Height="120" Margin="10,10,108,0" LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Hidden" />
-        <StackPanel>
-            <ToggleButton x:Name = "tb" Content = "Toggle"
-         Checked = "HandleCheck" Unchecked = "HandleCheck" Margin = "20"
-         Width = "108" HorizontalAlignment = "Center" />
-        </StackPanel>
-        <Border BorderThickness="2" BorderBrush="Black" Margin="425,206,31,420">
-            <Label Background="White" Name="songStatus" HorizontalContentAlignment="Center" />
+        <ToggleButton x:Name = "tb" Content = "Toggle"
+         IsChecked="{Binding Path=Repeat}"
+         Width = "76" HorizontalAlignment = "Center" Canvas.Left="20" Canvas.Top="155" Height="37" />
+
+        <Border BorderThickness="2" BorderBrush="Black" Height="43" Canvas.Left="1000" Canvas.Top="202" Width="170">
+            <Label Background="White" Name="songStatus"  HorizontalContentAlignment="Center" />
         </Border>
-        <Slider IsMoveToPointEnabled="True" Name="seekBar" Margin="36,256,36,378" ValueChanged="ChangeValue"/>
-    </Grid>
+        <Slider IsMoveToPointEnabled="True" Name="seekBar" Height="35" ValueChanged="ChangeValue" Canvas.Left="20" Canvas.Top="210" Width="975" />
+        <Button Click="Button_Click" Content="Full screen" Canvas.Left="101" Canvas.Top="155" Height="37" Width="76" />
+        <Button BorderThickness="0" FontSize="30" Name="ExitButton" Width="109" Height="63" Background="Transparent" BorderBrush="Black" Command="{Binding ExitCommand}" HorizontalAlignment="Left"  VerticalAlignment="Bottom" Canvas.Left="1075" Canvas.Top="10">Exit</Button>
+        <Grid>
+            <MediaElement LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Visible" Canvas.Left="584" Canvas.Top="276" Width="600" Height="385" Margin="584,279,-584,-279" />
+        </Grid>
+    </Canvas>
+    <!--</Grid>-->
 </Window>
